# fastapi-react-aspire

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  apphost.cs  setup-azure.ps1  setup-azure.sh  setup.ps1  setup.sh
.github/: copilot-instructions.md
.github/agents/: e2e-tester.agent.md  fastapi-unit-tests.agent.md  security-reviewer.md
.github/instructions/: respond-in-french.instructions.md
.github/prompts/: add-api-tests.prompt.md  add-azure-service.prompt.md  add-shared-dependency.prompt.md  add-tracing.prompt.md  debug-aspire.prompt.md  explain-codebase.prompt.md  fix-ci-failure.prompt.md  generate-fastapi-unit-tests.prompt.md  new-api-module.prompt.md  new-react-page.prompt.md  playwright-test.prompt.md
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  main.py  telemetry.py
api/app/common/: __init__.py  settings.py  tracer.py
api/app/modules/: __init__.py
api/app/modules/items/: __init__.py  routes.py  schemas.py  service.py
api/app/modules/projects/: __init__.py  routes.py  schemas.py  service.py
api/tests/: test_item_service.py  test_items.py  test_project_service.py  test_projects.py
docs/code-review/: 2026-03-19-fastapi-react-aspire-review.md
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  react-router.config.ts  server.js  tsconfig.json  vite.config.ts
web/app/: app.css  env.d.ts  root.loader.ts  root.tsx  routes.ts
web/e2e/: home.spec.ts  items.spec.ts  navigation.spec.ts  projects.spec.ts
(+6 files in other folders)
